react-frontend/src/pages/pages.css
/* ... */
g {
    opacity: 0.5;
}


h5 {
    color: #122640;
}

#landingPage {
    height: 100vh;
    .div{
        align-items: center;
    }

    .layer.background{
        position: fixed;
        z-index: 1;
        opacity: 0.6;
    }

    .layer.front{
        position: relative;
        z-index: 100;
    }
}

/*---------------*/

#leftGreen{
    background-color: green;
    margin-left: 228px;
    margin-top: 5px;
    border-radius: 50%;
    height: 1.5rem;
    width: 1.5rem;
    z-index: 5;
    opacity: 0.9;
    animation:21s 5s ease-in-out infinite greenTrain-in;
}

@keyframes greenTrain-in {
    0% {
        transform: translateY(0) translateX(0);
      }
      14% {
        transform: translateY(113px) translateX(0);
      }
      28% {
        transform: translateY(114px) translateX(132px);
      }
      42% {
        transform: translateY(250px) translateX(132px);
      }
      56% {
        transform: translateY(250px) translateX(-112px);
      }
      70% {
        transform: translateY(440px) translateX(-112px);
      }
      84% {
        transform: translateY(440px) translateX(-16px);
      }
      98% {
        transform: translateY(520px) translateX(-16px);
        opacity: 0.9;
      }
      100% {
        opacity: 0;
      }
  }


/* contentPage------------------------------*/

#contentPage {
    height: 550vh;
}

.page {
    padding: 5rem 2rem 0rem 2rem;
}

/*titel Page---------------*/

#titelPage {
    color: antiquewhite;
    height: 100vh;
    display: grid;
}

#homeButton {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: 3rem !important;
    left: 3rem !important;
}

#homeImg {
    height: 3rem;
    width: 3rem;
}

#contentTitel {
    position:absolute;
    font-size: 150px;
    top: 40%;
    left: 40%;
    color:antiquewhite !important;
    z-index: 10;
}

#zurichVideo {
    position:relative;
    height: 100vh;
    width: 100%;
    opacity: 0.7;
    object-fit: cover;
}

/*population Page---------------*/

#popPage {
    height: 100vh;
}

#population-map {
    height: 100%;
    width: 100%;

    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    column-gap: 3rem;
    grid-template-areas:
        "map description" 
        "map checkbox"
        "map infobox";
    
    .leaflet-container {
        grid-area: map;
        height: 90% !important;
        width: 100% !important;
    }

    #populationTitel {
        grid-area: description;
    }

    #swisstopoCheckbox {
        grid-area: checkbox;
    }
    
    #infoBox {
        grid-area: infobox;
    }

    #populationTitel {
        grid-area: description;
        display: block;
        margin: 0;
    }
}

#swissTopoCheckboxDiv {
    text-align: center;

    #swisstopoCheckbox {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    #swisstopoCheckbox p {
        margin: 0;
    }
}

.chbfsvolkszaehlung-bevoelkerungsstatistik_einwohner {
    font-size: 1rem;
    color: antiquewhite;
    border: antiquewhite 1px solid;

    .htmlpopup-header {
        display: flex;
        border-bottom: antiquewhite 1px solid;
        justify-content: center;
    }

    .htmlpopup-content table {
        margin-bottom: 0;
    }
}

/*Text Page 1---------------*/

#text1 {
    height: 75vh;
}

#heatmap-description {
    display: grid;
    padding: 0 3rem;

    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 3fr;
    gap: 3rem;
    justify-items: center;
    grid-template-areas:
        "title1 title2"
        "info1   info2"
    ;

    #title1 {
        margin: 0;
        grid-area: title1;
        align-self: end;
    }

    #info1 {
        grid-area: info1;
        color: antiquewhite;
        align-self: start;
        text-align: center;
    }
}


/*transport Page---------------*/

#transportPage {
    height: 100vh;
}

#public-transit-map {
    height: inherit;
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr;
    column-gap: 3rem;
    grid-template-areas: 
        "legend map"
        "info   map";
    
    .leaflet-container {
        grid-area: map;
        height: 90% !important;
        width: 100% !important;
    }

    .info{
        grid-area: info;
    }

    .info table {
        display: none;
    }

    .legend {
        grid-area: legend;
        margin-bottom: 1rem;
    }
}

#legendTitel {
    color: #DDCFBE;
    margin-bottom: 1rem;
    padding-bottom: 0.5rem;
    text-align: center;
    border-bottom: #DDCFBE 1px solid;
}

#legendList {
    /*border: antiquewhite 1px solid;*/
    padding-left: 7rem;
    display: flex;
    justify-content: center;
    flex-direction: column;
    text-align: center;

}

.listElement {
    margin: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    column-gap: 1rem;

    > p {
        color: antiquewhite;
        margin: 0.25rem 0 !important;
    }
}

#transitTitel {
    display: block;
}

.htmlpopup-header {
    color: antiquewhite;
    display: none;
}

/*Text Page 2---------------*/

#text2 {
    height: 75vh;
}
/* ... */

